--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.115.8
+fastapi==0.115.6
 uvicorn[standard]==0.30.6
-SQLAlchemy==2.0.36
-psycopg2-binary==2.9.9
 pydantic[email]==2.10.5
-pydantic-settings==2.7.1
-
-pytest==8.3.4
+pydantic-settings==2.4.0
+SQLAlchemy==2.0.32
+alembic==1.13.2
+python-json-logger==2.0.7
 httpx==0.27.2
+pytest==8.3.2
+pytest-cov==5.0.0
